2002-12-22  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03594] mime decode with encoding named 'b' & 'q'
	* mimehead.c (decodeWord): toupeer(method)

2002-12-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* file.c (discardline): not used

2002-12-22  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03593] Re: segmentation fault when <title> exist after <img>
	* file.c (cur_title): added
		(save_obuf): deleted
		(process_title): added
		(process_n_title): added
		(feed_title): added
		(HTMLtagproc1): rewrite HTML_TITLE, HTML_N_TITLE, 
				HTML_TITLE_ALT, HTML_N_HEAD, HTML_HEAD
		(HTMLlineproc0): check RB_TITLE
		(completeHTMLstream): add RB_TITLE
		(loadHTMLstream): initialize cur_title

2002-12-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03590] segmentation fault when <title> exist after <img>
	* file.c (save_line): deleted
		(save_prevchar): deleted
		(save_obuf): added
		(HTMLtagproc1): bcopy save_obuf

2002-12-20  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03588] include time.h in ftp.c
	* ftp.c: include <time.h>

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03583] w3mman
	* scripts/w3mman/README: W3MMAN_W3M, W3MMAN_MAN
	* scripts/w3mman/w3mman.1.in: add ENVIRONMENT
	* scripts/w3mman/w3mman.in: $ENV{'W3MMAN_W3M'}, $ENV{'W3MMAN_MAN'}
	* scripts/w3mman/w3mman2html.cgi.in: $ENV{'W3MMAN_MAN'}
					hyphenation

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03582] add config options graphic_char and use_proxy
	* NEWS: rc: graphic_char, use_proxy
	* fm.h (Do_no_use_proxy): macro using use_proxy
		(use_proxy): added
		(no_graphic_char): deleted
		(UseGraphicChar): added
	* main.c (main): UseGraphicChar, use_proxy
	* rc.c (CMT_GRAPHIC_CHAR): added
		(CMT_USE_PROXY): added
		(params1): graphic_char
		(params4): use_proxy
	* terms.c (graph_ok): UseGraphicChar

2002-12-19  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03581] MARK_URL, MARK_WORD