@@ -1,4 +1,4 @@
-/* $Id: mimehead.c,v 1.5 2002/12/21 16:20:40 ukai Exp $ */
+/* $Id: mimehead.c,v 1.6 2002/12/22 14:26:34 ukai Exp $ */
 /* 
  * MIME header support by Akinori ITO
  */
@@ -217,11 +217,13 @@ decodeWord(char **ow)
 	goto convert_fail;
     w++;
     p = w;
-    switch (toupper(method)) {
+    switch (method) {
     case 'B':
+    case 'b':
 	a = decodeB(&w);
 	break;
     case 'Q':
+    case 'q':
 	a = decodeQ(&w);
 	break;
     default:
